--- a/src/components/home/Home.css
+++ b/src/components/home/Home.css
@@ -5,15 +5,13 @@
     width: 100%;
     display: flex;
     flex-direction: column;
-
     background: url(bachground.jpg) 100% 100% no-repeat;
     background-size: cover;
 }
 
 .home_block {
-    width: 100%;
-    margin: 1% auto;
-    background: none;
+    width: 1200px;
+    margin: 0 auto;
 }
 
 .home_text {
@@ -64,43 +62,16 @@
     background-color: #ffffff;
 }
 
-/* @media (max-width: 360px) {
-    .home_window {
-        display: block;
-        width: 100%;
-        height: auto;
-        background: none;
-        background-color: #304269;
-        padding: 0px;
-    }
+@media (max-width: 1200px) {
     .home_block {
-        padding: 0 16px 0 16px;
-    }
-    .home_header {
-        width: 100%;
-        height: 80px;
-        background-color: #304269;
-        border-bottom: 1px solid black;
-    }
-    .home_text {
-        width: 100%;
-        height: auto;
-        margin: 0;
-        padding: 0 0 20px 0;
-        background-color: #304269;
-        border-bottom: 1px solid black;
-    }
-    .text_changeBodyBlock {
-        display: block;
+        width: 1024px;
         margin: 0 auto;
-        width: 240px;
-        height: 40px;
-        border-radius: 15px;
-        border: 2px solid #ffffff;
     }
-    .home_body {
-        width: 100%;
-        height: auto;
-        background-color: #304269;
+}
+
+@media (max-width: 1040px) {
+    .home_block {
+        width: 760px;
+        margin: 0 auto;
     }
-} */
+}
