--- a/src/components/Places/PlacesPanel.css
+++ b/src/components/Places/PlacesPanel.css
@@ -3,6 +3,7 @@
 .placesPanel_sortText{
     color: #304269;
     margin-right: 1%;
+    line-height: 35px;
 }
 .placesPanel_buttonStyle{
     height: 24px;
