--- a/src/components/driverProfile/DriversProfileComments.css
+++ b/src/components/driverProfile/DriversProfileComments.css
@@ -14,13 +14,18 @@
     height: 100%;
     background: transparent;
     border:none;
+    line-height: 35px;
 }
 .driverProfileComments_panel_selectedElement{
-    height: 100%;
-    background: transparent;
-    border:none;
-    border-bottom: 3px solid #ff6600;
     color: #ff6600;
+    position: relative;
+}
+.driverProfileComments_panel_selectedElement::after{
+    content: "";
+    display: block;
+    position: absolute;
+    width: 90%;
+    border-bottom: 3px solid #ff6600;
 }
 .driverProfileComments_commentBlock{ 
     display: flex;
