--- a/src/components/drivers/Drivers.css
+++ b/src/components/drivers/Drivers.css
@@ -1,24 +1,39 @@
 .drivers_top_background {
+    top: 0;
+    width: 100%;
+    background: url(pictures/Rectangle.jpg) no-repeat;
+    background-size: cover;
+    padding: 26px 0 48px 0;
+}
+.wrapper{
+    display: flex;
+    position: relative;
+    flex-direction: column;
+    top: 0;
+    width: 1200px;
+    height:auto;
+    margin: 0 auto;
+    z-index: 2;
+}
+.drivers_top_block{
     display: flex;
     flex-direction: column;
     top: 0;
     width: 100%;
-    height: auto;
-    background: url(pictures/Rectangle.jpg) no-repeat;
-    background-size: cover;
-    padding: 0% 17% 1% 17%;
+    margin: 0 auto;
 }
-
 .drivers_bottom_background {
     display: flex;
     flex-direction: column;
-    top: 25%;
+    top: 400px;
     width: 100%;
-    padding: 0% 17% 1% 17%;
+    padding: 30px 0 0 0;
+    margin: 0 auto;
 }
 
 
 
+/*
 @media (max-width: 1400px) {
     .drivers_top_background {
         padding: 0% 10% 1% 10%;
@@ -44,4 +59,4 @@
     .drivers_bottom_background {
         padding: 0;
     }
-}
+}*/
