--- a/src/components/drivers/DriversRoute/DriversRoute.css
+++ b/src/components/drivers/DriversRoute/DriversRoute.css
@@ -4,9 +4,11 @@
     justify-content: center;
     align-items: flex-start;
     background-color: rgba(48, 66, 105, 0.60);
-    margin: 0.5% 0;
-    padding: 2% 2% 0 2%;
+    margin: 35px 0 0 0;
+    padding: 20px 20px 0 20px;
     border-radius: 5px;
+    height: 240px;
+    width: 100%;
     /* filter: blur(1px); */
 }
 
@@ -17,11 +19,11 @@
     justify-content: space-between;
     order: 0;
     width: 100%;
-    font-size: 1.5rem;
+    font-size: 24px;
     color: #ffffff;
     font-family: "Roboto";
     font-weight: 400;
-    margin-bottom: 2%;
+    margin-bottom: 35px;
 }
 
 .route_date_text {
@@ -39,8 +41,8 @@
 
 .route_change_emblem {
     display: flex;
-    width: 14%;
-    height: 100%;
+    width: 21px;
+    height: 21px;
 }
 
 .route_change_text {
@@ -50,9 +52,9 @@
     text-decoration: underline;
     font-family: "Roboto";
     font-weight: 400;
-    font-size: 0.8rem;
+    font-size: 12px;
     color: #ffffff;
-    margin: 2px;
+    margin: 3px;
 }
 
 .route_show {
@@ -66,25 +68,24 @@
 .route_show_element {
     display: flex;
     position: relative;
-    height: 100%;
-    width: 25%;
-    margin-bottom: 1%;
+    height: 40px;
+    width: 280px;
 }
 
 .route_show_text {
     position: absolute;
-    height: 100%;
+    height: 40px;
     font-family: "Roboto";
     font-weight: 400;
-    left: 25%;
+    left: 35px;
     font-size: 15px;
     color: #ffffff;
 }
 
 .route_show_line {
     position: absolute;
-    height: 50%;
-    left: 20%;
+    height: 25px;
+    left: 30px;
     width: 80%;
     color: #ffffff;
     border-bottom: 1px solid;
