--- a/src/components/header/header_css.css
+++ b/src/components/header/header_css.css
@@ -11,7 +11,6 @@
     display: flex;
     flex-direction: row;
     align-items: center;
-    margin-right: 160px;
     order: 0;
 }
 
@@ -57,7 +56,8 @@
     z-index: 1;
     width: 290px;
     height: 20px;
-    margin-right: 105px;
+    padding-left: 130px;
+    padding-right: 105px;
     order: 1;
 }
 
@@ -198,9 +198,3 @@
 
     }
 }
-
-/* @media (max-width: 800px) {
-    .headerLogo {
-        width: 45%;
-    }
-} */
