--- a/src/components/home/Home.css
+++ b/src/components/home/Home.css
@@ -8,9 +8,14 @@
     background: url(bachground.jpg) 100% 100% no-repeat;
     background-size: cover;
 }
+.home_header{
+    max-width: 1200px;
+    width: 100%;
+}
 
 .home_block {
-    width: 1200px;
+    max-width: 1200px;
+    width: 100%;
     margin: 0 auto;
 }
 
@@ -18,7 +23,7 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    margin: 4% 0 3% 0;
+    /* margin: 4% 0 3% 0; */
 }
 
 .home_body {
