--- a/src/components/home/HomeBody/RouteMenu.css
+++ b/src/components/home/HomeBody/RouteMenu.css
@@ -1,9 +1,9 @@
 .routemenu_container {
     display: flex;
     flex-direction: column;
-    align-content: center;
-    justify-content: center;
-    width: 90%;
+    padding: 41px 15px 0 15px;
+    min-height: 317px;
+    width: 100%;
 }
 
 .routemenu_addCity {
