--- a/src/components/header/header_css.css
+++ b/src/components/header/header_css.css
@@ -6,20 +6,20 @@
 }
 
 .headerLogo {
-    position: relative;
+    /* position: relative;
     z-index: 1;
     display: flex;
     flex-direction: row;
-    align-items: center;
-    order: 0;
+    align-items: center; */
+    /* order: 0; */
 }
 
 .headerSelect {
-    position: relative;
+    /* position: relative;
     z-index: 1;
     display: flex;
-    flex-direction: row;
-    order: 2;
+    flex-direction: row; */
+    /* order: 2; */
 }
 
 .header_geo_block {
@@ -52,12 +52,12 @@
 }
 
 .header_buttonMass {
-    position: relative;
+    /* position: relative;
     z-index: 1;
     height: 20px;
     padding-left: 130px;
-    padding-right: 60px;
-    order: 1;
+    padding-right: 60px; */
+    /* order: 1; */
 }
 
 .buttonMass_button {
