--- a/src/components/header/HomeHeaderStyles.css
+++ b/src/components/header/HomeHeaderStyles.css
@@ -5,7 +5,7 @@
     color: #304269;
 }
 .homeBackgroundColorClass{
-    background-color: #97a3b4;
+    background-color: rgba(48, 66, 105, 0.5);
 }
 .homeBorderColorClass{
     border-color: #304269;
