--- a/src/components/header/header_css.css
+++ b/src/components/header/header_css.css
@@ -2,10 +2,20 @@
     margin-top: 30px;
 }
 
+.headerLogo {
+    padding-left: 0px !important;
+    max-width: 480px !important;
+}
+
+.headerLogo img {
+    padding-left: 0px;
+}
+
 .header_geo_block {
     display: flex;
     flex-direction: row;
     align-items: center;
+    padding: 0px !important;
 }
 
 .header_geo_button {
@@ -29,6 +39,10 @@
 .geo_button_value>div {
     height: 22px;
     padding: 0;
+}
+
+.header_buttonMass {
+    padding-left: 0px !important;
 }
 
 .buttonMass_button {
@@ -55,30 +69,67 @@
 .selectGeneral {
     position: relative;
     height: 30px;
-    font-family: "Roboto";
-    font-weight: 500;
-    font-size: 10.5pt;
+    font-family: "Roboto" !important;
+    font-weight: 500 !important;
+    font-size: 10.5pt !important;
     margin: 0;
     margin-right: 14px;
     border-radius: 5px;
     background-color: rgba(48, 66, 105, 0.5) !important;
+    background: rgba(48, 66, 105, 0.5) !important;
 }
 
-.dropdownLanguageMenu{
+.selectGeneralBt {
+    border: none !important;
+    box-shadow: none !important;
+    background-color: rgba(48, 66, 105, 0.5) !important;
+    background: rgba(48, 66, 105, 0.5) !important;
+}
+
+.selectGeneral img {
+    margin-right: 2px;
+    margin-bottom: 2px;
+}
+
+.dropdownMenu {
+    font-family: "Roboto" !important;
+    font-weight: 500 !important;
+    font-size: 10.5pt !important;
     background: rgba(48, 66, 105, 0.5) !important;
     color: #fff !important;
     padding: 0px !important;
     margin: 0px !important;
     min-width: 60px !important;
+    max-width: 80px !important;
+}
+
+.currenty {
+    text-align: center !important;
+}
+
+.dropdownMenu img {
+    padding-left: 4px;
+}
+
+.headerSelect {
+    padding-right: 0px !important;
+    max-width: 360px !important;
+}
+
+.header_registration {
+    border: 1px solid #304269;
+    border-radius: 5px;
+    background: none;
+    line-height: 28px;
 }
 
 .header_registration p {
-    width: 100%;
-    margin: 0;
-    text-align: center;
-    font-size: 9pt;
-    font-family: "Roboto";
-    font-weight: 300;
+    width: 100% !important;
+    margin: 0 !important;
+    text-align: center !important;
+    font-size: 9pt !important;
+    font-family: "Roboto" !important;
+    font-weight: 300 !important;
 }
 
 /* @media (max-width: 1200px) {
