--- a/src/components/home/HomeHeader/header_css.css
+++ b/src/components/home/HomeHeader/header_css.css
@@ -1,23 +1,23 @@
-.header {
+/* .header {
     display: flex;
     flex-direction: row;
     justify-content: center;
     align-items: center;
-}
+} */
 
-.headerLogo {
+/* .headerLogo {
     display: flex;
     flex-direction: row;
     align-items: center;
     justify-content: space-between;
     order: 0;
-}
+} */
 
-.headerSelect {
+/* .headerSelect {
     display: flex;
     flex-direction: row;
     order: 2;
-}
+} */
 
 .header_geo_block {
     display: flex;
@@ -47,7 +47,7 @@
     min-width: 50px;
     border-radius: 5px;
     padding: 2px 4px 4px;
-    background-color: #97a3b4;
+    background-color: rgba(48, 66, 105, 0.5);
 }
 
 .geo_button_value>div {
@@ -56,10 +56,10 @@
     border-bottom: 1px #fff dashed;
 }
 
-.header_buttonMass {
+/* .header_buttonMass {
     margin: 2% 3% 2% 5%;
     order: 1;
-}
+} */
 
 .buttonMass_button {
     text-decoration: none;
@@ -75,88 +75,7 @@
     text-decoration: none;
 }
 
-.selectСgvicurrency {
-    min-width: 74px;
-    border-radius: 5px;
-    padding: 3px 4px 4px;
-    margin-right: 5px;
-    background-color: #97a3b4;
-    text-decoration: none;
-    outline: none;
-    color: #fff;
-}
-
-label.selectGeneral {
-    display: block;
-    position: relative;
-    min-width: 70px;
-    height: 30px;
-    font-size: 10.5pt;
-    margin: 0;
-    margin-right: 10px;
-    border-radius: 5px;
-    background: #97a3b4;
-    color: #fff;
-}
-
-label.selectGeneral::after {
-    content: ">";
-    position: absolute;
-    right: -10px;
-    border-radius: 5px;
-    top: 1px;
-    z-index: 2;
-    width: 40px;
-    height: 26px;
-    text-align: center;
-    line-height: 26px;
-    color: #fff;
-    transform: rotate(90deg);
-    cursor: pointer;
-}
-
-label.selectGeneral label {
-    display: inline-block;
-    min-width: 70px;
-    height: 30px;
-    margin: 0;
-    line-height: 28px;
-    border-radius: 5px;
-    white-space: nowrap;
-    padding: 0 14px 0 6px;
-    background: #97a3b4;
-}
-
-label.selectGeneral label img {
-    margin-right: 2px;
-}
-
-label.selectGeneral input,
-label.selectGeneral label {
-    display: none;
-}
-
-label.selectGeneral div {
-    min-width: 100%;
-    max-height: 500px;
-    background: #97a3b4;
-    border-radius: 5px;
-    overflow-x: hidden;
-}
-
-label.selectGeneral input[type="radio"]:checked~div {
-    position: absolute;
-    top: 28px;
-    z-index: 999;
-    overflow-y: auto;
-}
-
-label.selectGeneral input[type="radio"]:checked~div>label,
-label.selectGeneral input[type="radio"]:checked+label {
-    display: block;
-}
-
-.header_registration {
+/* .header_registration {
     display: flex;
     flex-direction: row;
     flex-wrap: nowrap;
@@ -169,19 +88,21 @@ label.selectGeneral input[type="radio"]:checked+label {
     border-radius: 5px;
     text-align: center;
     cursor: pointer;
+} */
+.header_registration{
+    height: 28px;
 }
-
 .header_registration p {
     width: 100%;
     margin: 0;
     text-align: center;
-    font-size: 0.8rem;
+    font-size: 9pt;
     color: #304269;
     font-family: "Roboto";
     font-weight: 300;
 }
 
-@media (max-width: 1060px) {
+/* @media (max-width: 1060px) {
     .header {
         flex-direction: row;
         justify-content: space-between;
@@ -204,4 +125,4 @@ label.selectGeneral input[type="radio"]:checked+label {
     .headerLogo {
         width: 45%;
     }
-}
+} */
