--- a/src/components/drivers/Drivers.css
+++ b/src/components/drivers/Drivers.css
@@ -3,14 +3,15 @@
     width: 100%;
     background: url(pictures/Rectangle.jpg) no-repeat;
     background-size: cover;
-    padding: 26px 0 48px 0;
+    padding: 5px 0 50px 0;
 }
 .wrapper{
     display: flex;
     position: relative;
     flex-direction: column;
     top: 0;
-    width: 1200px;
+    width: 100%;
+    max-width: 1200px;
     height:auto;
     margin: 0 auto;
     z-index: 2;
