--- a/src/components/drivers/DriversBody/DriversBlock/DriversBlock.css
+++ b/src/components/drivers/DriversBody/DriversBlock/DriversBlock.css
@@ -2,8 +2,8 @@
     display: flex;
     flex-direction: column;
     width: 100%;
-    height: 80%;
-    margin-top: 2%;
+    /*height: 80%;*/
+    margin-top: 15px;
 }
 
 .visibleString {
@@ -30,7 +30,7 @@
     align-items: center;
     width: 100%;
     box-shadow: 0 0 10px 0px rgba(0, 0, 0, 0.25);
-    padding: 3% 1.5%;
+    padding: 30px 20px;
     margin-bottom: 10px;
     border-radius: 5px;
 }
@@ -44,7 +44,7 @@
     flex-direction: row;
     align-items: center;
     height: 100%;
-    width: 50%;
+    width: 510px;
     border-right: 1px solid black;
 }
 
@@ -52,7 +52,8 @@
     display: flex;
     flex-direction: column;
     height: 100%;
-    width: 50%;
+    width: 380px;
+    padding-left: 25px;
 }
 .block_element_right_div{
     width: 90%;
@@ -60,9 +61,9 @@
 
 .block_element_photo {
     display: flex;
-    width: 33.5%;
-    height: 100%;
-    margin-right: auto;
+    width: 156px;
+    height: 156px;
+    
 }
 
 .myHeart {
