--- a/src/components/drivers/DriversBody/DriversBlock/TripBlock.css
+++ b/src/components/drivers/DriversBody/DriversBlock/TripBlock.css
@@ -1,22 +1,22 @@
 .element_right_line {
     display: flex;
     flex-direction: row;
-    width: 95%;
+    width: 100%;
 }
 .element_right_line:nth-child(1) {
     margin-bottom: 20px;
 }
 
 .tripBlock_carImage {
-    width: 15%;
-    height: 10%;
+    width: 55px;
+    /*height: 10%;*/
 }
 
 .tripBlock_carData {
     display: flex;
     flex-direction: column;
-    width: 80%;
-    margin-left: 20px;
+    width: 256px;
+    margin-left: 30px;
     height: 100%;
     text-align: top;
 }
@@ -56,11 +56,11 @@
     font-weight: 500;
     font-size: 12pt;
     color: #fff;
-    height: 15%;
+    height: 100%;
     min-height: 42px;
-    width: 85%;
+    width:256px;
     max-width: 300px;
-    margin-left: 13px;
+    margin-left: 30px;
     background-color: #304269;
     border: none;
     cursor: pointer;
@@ -85,7 +85,6 @@
 }
 
 .tripBlock_buttonBlock_commentary {
-    width: 95%;
     font-size: 9pt;
     color: #304269;
     font-family: "Roboto";
@@ -100,7 +99,6 @@
     color: #304269;
     font-family: "Roboto";
     font-weight: 400;
-    width: 95%;
     margin-top: 10px;
 }
 
