--- a/src/components/drivers/DriversRoute/DriversRoute.css
+++ b/src/components/drivers/DriversRoute/DriversRoute.css
@@ -61,7 +61,7 @@
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    padding-bottom: 1%;
+    padding-bottom: 63px;
     width: 100%;
 }
 
@@ -86,7 +86,7 @@
     position: absolute;
     height: 25px;
     left: 30px;
-    width: 80%;
+    width: 250px;
     color: #ffffff;
     border-bottom: 1px solid;
 }
@@ -94,7 +94,7 @@
 .route_bottomBlock {
     display: flex;
     flex-direction: column;
-    padding: 1% 0;
+    padding-bottom: 19px;
     width: 50%;
 }
 
