--- a/src/components/header/header_css.css
+++ b/src/components/header/header_css.css
@@ -73,7 +73,7 @@
     font-weight: 500 !important;
     font-size: 10.5pt !important;
     margin: 0;
-    margin-right: 14px;
+    margin-right: 5px;
     border-radius: 5px;
     background-color: rgba(48, 66, 105, 0.5) !important;
     background: rgba(48, 66, 105, 0.5) !important;
@@ -112,8 +112,8 @@
 }
 
 .headerSelect {
-    padding-right: 0px !important;
-    max-width: 360px !important;
+    padding: 0px !important;
+    max-width: 305px !important;
 }
 
 .header_registration {
