--- a/src/components/drivers/Drivers.css
+++ b/src/components/drivers/Drivers.css
@@ -1,14 +1,13 @@
 .drivers_top_background {
     top: 0;
-    width: 100%;
+    /*width: 100%;*/
     background: url(pictures/Rectangle.jpg) no-repeat;
     background-size: cover;
-    padding: 5px 0 50px 0;
+    padding-top: 5px;
+    padding-bottom: 50px;
 }
 .wrapper{
-    display: flex;
     position: relative;
-    flex-direction: column;
     top: 0;
     width: 100%;
     max-width: 1200px;
@@ -17,19 +16,11 @@
     z-index: 2;
 }
 .drivers_top_block{
-    display: flex;
-    flex-direction: column;
-    top: 0;
     width: 100%;
     margin: 0 auto;
 }
 .drivers_bottom_background {
-    display: flex;
-    flex-direction: column;
-    top: 400px;
-    width: 100%;
-    padding: 30px 0 0 0;
-    margin: 0 auto;
+    padding-top: 30px;
 }
 
 
