--- a/src/components/manipulator/Manipulator.css
+++ b/src/components/manipulator/Manipulator.css
@@ -65,7 +65,7 @@
 .pageNumbers_text {
     display: flex;
     height: 20px;
-    width: 80px;
+    width: 90px;
     text-align: center;
     line-height: 20px;
     font-size: 12pt;
@@ -74,7 +74,7 @@
     color: #999999;
     border: none;
     background-color: transparent;
-    padding: 0 2%;
+    padding: 0 5px;
 }
 
 .pageNumbers_text:hover {
