--- a/src/components/home/HomeBody/RenderFourEl.css
+++ b/src/components/home/HomeBody/RenderFourEl.css
@@ -1,5 +1,9 @@
 .tourBody {
     box-shadow: 0 0 10px 0px rgba(0, 0, 0, 0.2);
+    min-height: 360px;
+}
+.tourBody:hover{
+    box-shadow: 0 0 25px 0px rgba(0, 0, 0, 0.3);
 }
 
 .tourTitle {
@@ -10,6 +14,9 @@
     max-height: 45px;
     text-decoration: none;
     overflow: hidden;
+}
+.tourTitle:hover {
+    color: #f26101;
 }
 
 .tourTitle:hover {
@@ -35,6 +42,7 @@
     font-size: 10.5pt;
     text-decoration: none;
     color: #304269;
+    height: 100%;
 }
 
 .tourLink:hover {
