--- a/src/components/drivers/DriversBody/DriversProperties/components/ValueMenu/ValueMenu.css
+++ b/src/components/drivers/DriversBody/DriversProperties/components/ValueMenu/ValueMenu.css
@@ -107,9 +107,11 @@
 }
 
 .valueMenu_stateBlock_applyButton:hover{
+    transition: all 0.3s;
     color: #f60;
 }
 .valueMenu_stateBlock_cancelButton:hover{
+    transition: all 0.3s;
     color: #f60;
 }
 
