--- a/src/components/drivers/DriversBody/DriversProperties/components/PeopleMenu/PeopleMenu.css
+++ b/src/components/drivers/DriversBody/DriversProperties/components/PeopleMenu/PeopleMenu.css
@@ -116,9 +116,11 @@
     background: none;
 }
 .peopleMenu_stateBlock_cancelButton:hover{
+    transition: all 0.3s;
     color: #f60;
 }
 .peopleMenu_stateBlock_applyButton:hover{
+    transition: all 0.3s;
     color: #f60;
 }
 
