--- a/src/components/header/header_css.css
+++ b/src/components/header/header_css.css
@@ -54,7 +54,8 @@
     margin: 0px 15px;
 }
 .buttonMass_button:hover {
-    color: #333;
+    transition: all 0.3s;
+    color: #f60;
 }
 
 .buttonMass_button:hover {
@@ -85,7 +86,7 @@
 .selectGeneralBt {
     border: none !important;
     box-shadow: none !important;
-    background-color: rgba(48, 66, 105, 0.5) !important;
+    background-color: hsla(221, 37%, 30%, 0.5) !important;
     background: rgba(48, 66, 105, 0.5) !important;
 }
 
@@ -122,10 +123,23 @@
 }
 
 .header_registration {
-    border: 1px solid #304269;
+    border: 1px solid #304269 !important;
     border-radius: 5px;
     background: none;
     line-height: 28px;
+}
+
+.header_registration:hover {
+    transition: all 0.3s;
+    border: 1px solid #f60 !important;
+   
+}
+.header_registration:hover  p{
+    transition: all 0.3s;
+    color: #f60 ;
+}
+.header_registration:focus {
+   outline: none;
 }
 
 .header_registration p {
@@ -134,7 +148,8 @@
     text-align: center !important;
     font-size: 9pt !important;
     font-family: "Roboto" !important;
-    font-weight: 300 !important;
+    font-weight: 500 !important;
+    color: #304269;
 }
 
 /* @media (max-width: 1200px) {
