--- a/src/components/driverProfile/DriversProfileComments.css
+++ b/src/components/driverProfile/DriversProfileComments.css
@@ -1,10 +1,5 @@
 .driverProfileComments_panel{
-    display: flex;
-    flex-direction: row;
     width:100%;
-    margin-top: 2%;
-    
-    
     border-bottom: 1px solid #cccccc;
     font-size: 16px;
     font-family: "Roboto";
@@ -28,41 +23,31 @@
     border-bottom: 3px solid #ff6600;
 }
 .driverProfileComments_commentBlock{ 
-    display: flex;
-    flex-direction: column;
     width:100%;
-    margin-top: 2%;
+    margin-top: 40px;
 }
 .commentBlock_createComment{
-    display: flex;
     position: relative;
-    flex-direction: column;
     width:100%;
     box-shadow: 0 0 1px 1px rgba(221, 221, 221, 1);
     padding: 1.5% 3%;
     margin-bottom: 1%;
 }
 .commentBlock_comments{
-    display: flex;
     position: relative;
-    flex-direction: column;
     width:100%;
     box-shadow: 0 0 1px 1px rgba(221, 221, 221, 1);
     padding: 1.5% 3%;
     margin-bottom: 1%;
 }
 .createComment_element{
-    display: flex;
-    flex-direction: row;
-    height: 33%;
+    /*height: 33%;*/
 }
 .createComment_picture{
-    display: flex;
     height: 60px;
     border-radius: 30px;
 }
 .createComment_textBlock{
-    display: flex;
     margin: 0 1% 0 2%;
     height:60px;
     line-height: 60px;
@@ -71,6 +56,7 @@
     font-weight: 500;
     color: #304269;
 }
+/*
 .createComment_starsBlock{
     display: flex;
     flex-direction: row;
@@ -90,9 +76,9 @@
     height: 100%;
     background: linear-gradient(to right,#ff6600 50%, #999999 50%);
     
-}
+}*/
+
 .createComment_textareaStyle{
-    display: flex;
     width: 100%;
     height: 85px;
     border-radius: 5px;
@@ -102,7 +88,6 @@
     color: #cccccc;
 }
 .createComment_sendButton{
-    display: flex;
     width: 25%;
     height: 40px;
     background-color: #ff6600;
@@ -115,26 +100,21 @@
     font-weight: 600;
     margin: 1% 0 0 auto;
 }
+/*
 .createComment_sendButton_value{
     display: flex;
     margin: auto;
-}
+}*/
 .commentBlock_element{
-    display: flex;
     position: relative;
-    flex-direction: row;
     height:15%;
     width:100%;
     padding: 3%;
     margin-bottom: 1%;
     border-bottom: 1px solid #cccccc;
 }
-.valueBlock_firstElement{
-    display: flex;
-    flex-direction: row;
-}
+
 .valueBlock_firstElement_name{
-    display: flex;
     margin-right: auto;
 
     font-size: 14px;
@@ -143,7 +123,6 @@
     color: #304269;
 }
 .valueBlock_firstElement_date{
-    display: flex;
     margin-left: auto;
 
     font-family: "Roboto";
@@ -151,6 +130,7 @@
     font-weight: 300;
     color: #999999;
 }
+/*
 .valueBlock_starsBlock{
     display: flex;
     flex-direction: row;
@@ -173,9 +153,8 @@
     width: 80px;
     height: 16px;
     
-}
+}*/
 .valueBlock_commentary{
-    display: flex;
     width: 100%;
     padding-right: 5%;
     max-height: 60px;
@@ -190,16 +169,12 @@
     line-height: 20px;
 }
 .commentBlock_picture{
-    display: flex;
     height: 60px;
 }
 .commentBlock_valueBlock{
-    display: flex;
-    flex-direction: column;
     height: 100%;
     width: 100%;
-    margin-left: 2%;
-    
+    margin-left: 2%;  
 }
 
 .news
