--- a/src/components/startTravelForm/StartTravelBlockStyles.css
+++ b/src/components/startTravelForm/StartTravelBlockStyles.css
@@ -1,7 +1,8 @@
 .travelFormBlock {
-    position: absolute;
-    width: 66%;
-    top: 10%;
-    margin: 0 auto;
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    top: 0;
     z-index: 10;
+    background-color: rgba(0, 0, 0, 0.3);
 }
