--- a/src/components/drivers/DriversRoute/SearchInput.css
+++ b/src/components/drivers/DriversRoute/SearchInput.css
@@ -1,2 +1,8 @@
-.searchElement_style{
+.searchElement_style{ 
+    position: absolute;
+    z-index: 8;
+    top: 35px;
+    left: 35px;
+    width: 70%;
+    border: 1px none 1px 1px solid #304269;
 }
