--- a/src/components/header/header_css.css
+++ b/src/components/header/header_css.css
@@ -82,6 +82,9 @@
     background-color: rgba(48, 66, 105, 0.5) !important;
     background: rgba(48, 66, 105, 0.5) !important;
 }
+.selectGeneral button {
+    padding: 5px !important; 
+}
 
 .selectGeneralBt {
     border: none !important;
@@ -96,8 +99,8 @@
 }
 
 .dropdownMenu {
-    top: 0.5px !important;
-    left: 2px !important;
+    top: 0px !important;
+    left: 0px !important;
     font-family: "Roboto" !important;
     font-weight: 500 !important;
     font-size: 10.5pt !important;
