--- a/src/components/home/HomeBody/RouteMenu.css
+++ b/src/components/home/HomeBody/RouteMenu.css
@@ -220,6 +220,8 @@ p.routemenu_search_text {
 }
 
 .city_input {
+    position: relative;
+    z-index: 3;
     outline: 0;
     border-width: 0 0 1px;
     border-color: white;
