--- a/src/components/driverProfile/DriverInfo.css
+++ b/src/components/driverProfile/DriverInfo.css
@@ -27,6 +27,7 @@
     font-size: 14px;
     color: #304269;
     margin: 20px 0 0 15px;
+    width: 340px;
 }
 
 .driverInfo_carBrand {
@@ -34,14 +35,14 @@
 }
 
 .driverInfo_fuelType {
-    padding-right: 2%;
+    padding-right: 5px;
     padding-left: 2px;
     border-right: 1px solid #cccccc;
     font-weight: 400;
 }
 
 .driverInfo_carProps {
-    padding-left: 2%;
+    padding-left: 5px;
     font-weight: 300;
 }
 
