--- a/src/components/driverProfile/DriversProfileComments.css
+++ b/src/components/driverProfile/DriversProfileComments.css
@@ -45,6 +45,7 @@
 }
 .createComment_picture{
     height: 60px;
+    width: 60px;
     border-radius: 30px;
 }
 .createComment_textBlock{
@@ -83,6 +84,7 @@
     height: 85px;
     border-radius: 5px;
     margin: 1% 0;
+    padding: 5px;
 }
 .createComment_textareaStyle::placeholder{
     color: #cccccc;
